Email form: spacing fixed. Uniform spacing implemented via 0.5em

--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,7 @@ html {
   height: 30px;
   width: 100%;
   display: inline-block;
+  margin-top: 0.5em;
 }
 #contact form input:hover {
  box-shadow: -1px 1px 8px #ffc, 1px -1px 8px #fff;
@@ -267,7 +268,7 @@ html {
 #contact form textarea {
  font-family: 'Raleway', Verdana, sans-serif;
  resize: none;
- margin-top: 1.5%;
+ margin-top: 0.5em;
 }
 #contact form textarea:hover {
  box-shadow: -1px 1px 8px #ffc, 1px -1px 8px #fff;
@@ -285,7 +286,7 @@ html {
 #contact form #form_submit { /* Submit button */
   font-size: 1em;
   line-height: 1.3em;
-  margin-top: 1.3em;
+  margin-top: 0.5em;
   margin-bottom: 0;
   color: #073542; /* Solarized base02 dark */ 
   background-color: #EEE9D6; /* Solarized Base2 White */
